Remove obsolete VM argument patching from ini files
The removal of --add-modules/--add-opens/--permit-illegal-access only ran
when the JVM was older than Java 9. RCPTT no longer supports AUT JVMs older
than Java 17, so this branch was dead code and the arguments it stripped are
all valid on Java 17. Drop the whole hack and its helper methods.

Also-by: Vasili Gulevich <vasili.gulevich@xored.com>

Co-authored-by: basilevs <650857+basilevs@users.noreply.github.com>