@@ -41,7 +41,6 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.ListIterator;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
@@ -919,78 +918,7 @@ public class TargetPlatformHelper implements ITargetPlatformHelper {
 			return null;
 		}
 
-		removeUnsupportedVMArgs(lines);
-
 		return lines;
-	}
-
-	private static final String VMARG_ADD_MODULES = "--add-modules";
-	private static final String VMARG_PERMIT_ILLEGAL_ACCESS = "--permit-illegal-access";
-	private static final String VMARG_ADD_OPENS = "--add-opens";
-	private static final String[] UNSUPPORTED_VMARGS = {
-			VMARG_ADD_MODULES, VMARG_PERMIT_ILLEGAL_ACCESS, VMARG_ADD_OPENS };
-
-	private void removeUnsupportedVMArgs(List<String> lines) {
-		String[] javaVersions = getJavaVersions();
-
-		// remove args was added into .ini file to support java 9
-		// see more: https://bugs.eclipse.org/bugs/show_bug.cgi?id=493761
-		if ((getMajorVersion(javaVersions) == 1 && getMinorVersion(javaVersions) < 9)
-				|| getMajorVersion(javaVersions) < 9) {
-			ListIterator<String> iterator = lines.listIterator();
-			while (iterator.hasNext()) {
-				String line = iterator.next().trim();
-				String arg = matchUnsupportedVMArg(line);
-				if (arg != null) {
-					iterator.remove();
-					// In an *.ini file a VM option and its value may be placed on
-					// separate lines (e.g. "--add-opens" followed by
-					// "java.base/java.lang=ALL-UNNAMED"). When the option is given
-					// without an inline value, drop the following value line as well
-					// so it does not remain as an orphan argument on the command line.
-					if (line.equals(arg) && iterator.hasNext()) {
-						iterator.next();
-						iterator.remove();
-					}
-				}
-			}
-		}
-	}
-
-	private static String matchUnsupportedVMArg(String line) {
-		for (String arg : UNSUPPORTED_VMARGS) {
-			if (line.equals(arg) || line.startsWith(arg + "=")) {
-				return arg;
-			}
-		}
-		return null;
-	}
-
-	private static String[] getJavaVersions() {
-		String javaVersion = System.getProperty("java.version");
-		return javaVersion.split("\\.|-"); // '.' and '-' are separators
-	}
-
-	private static int getMajorVersion(String[] versions) {
-		if (versions.length < 1) {
-			return 0;
-		}
-		try {
-			return Integer.valueOf(versions[0]);
-		} catch (NumberFormatException e) {
-			return 0;
-		}
-	}
-
-	private static int getMinorVersion(String[] versions) {
-		if (versions.length < 2) {
-			return 0;
-		}
-		try {
-			return Integer.valueOf(versions[1]);
-		} catch (NumberFormatException e) {
-			return 0;
-		}
 	}
 
 	public String getTemplateConfigLocation() {
